# symt-parking

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
apps/accounts/: admin.py  forms.py  managers.py
apps/accounts/migrations/: 0001_initial.py  0002_userprofile.py
apps/accounts/models/: __init__.py  user.py  user_profile.py
apps/accounts/utils/: permissions.py
apps/common/: models.py
apps/dashboard/: locations_urls.py  urls.py  views.py
apps/dashboard/templates/dashboard/: base.html  index.html  sidebar.html
apps/dashboard/urls/: __init__.py  commercial_units_urls.py  locations_urls.py  parkings_urls.py  stores_urls.py  tickets_urls.py  unit_occupancies_urls.py  users_urls.py
apps/dashboard/views/: __init__.py  commercial_units.py  default.py  locations.py  parkings.py  stores.py  tickets.py  unit_occupancies.py  users.py
apps/locations/: models.py
apps/locations/migrations/: 0001_initial.py
apps/locations/selectors/: location.py
apps/parkings/: apps.py  models.py
apps/parkings/migrations/: 0001_initial.py
apps/stores/: tests.py
apps/stores/migrations/: 0001_initial.py
apps/stores/models/: __init__.py  commercial_unit.py  store.py  unit_occupancy.py
apps/stores/selectors/: __init__.py  commercial_unit.py  store.py  unit_occupancy.py
apps/stores/tests/: __init__.py  test_models.py  test_selectors.py  test_views.py
apps/tickets/: models.py
apps/tickets/migrations/: 0001_initial.py
config/: settings.py  urls.py
config/components/: auth.py  base.py  database.py  email.py
templates/: base.html
(+28 files in other folders)
